Added Animations and Event listeners

--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
     <div id="formOutput"></div>
   </section>
 
+
+<!-- Light/Dark Mode Toggle -->
+<section>
+    <h2>🌗 Toggle Light/Dark Mode</h2>
+    <button id="toggleTheme">Toggle Theme</button>
+  </section>
+  
+  <!-- Animation Trigger Section -->
+  <section>
+    <h2>🎬 Animate Me!</h2>
+    <div class="animate-box" id="animateBox">Hover or Click Me!</div>
+  </section>
+  
+  <!-- Event Listener Examples -->
+  <section>
+    <h2>🖱️ Mouse Event Listener Example</h2>
+    <p id="mouseTarget">Hover over this text to see a color change.</p>
+  </section>
+  
+  <!-- Dynamic Cards -->
+  <section>
+    <h2>📦 Add Student Cards</h2>
+    <button id="addCard">Add New Card</button>
+    <div id="cardContainer" class="card-container"></div>
+  </section>
+  
+
   <!-- Footer -->
   <footer>
     Author: Cpt. SNN <br />
